# garry

./: .gitignore  LICENSE  README.md  TODO.md  docker-compose.yml  project_idea.md
.context/: conversation-2025-12-21.md
.github/workflows/: api.yml  auth.yml  deploy-android.yml  deploy-api.yml  deploy-auth.yml  deploy-ios.yml  deploy-landing.yml  deploy-web.yml  landing.yml  mobile.yml  web.yml
apps/api/: .dockerignore  Cargo.toml  Dockerfile
apps/api/migrations/: 001_create_warranties.sql
apps/api/src/: main.rs
apps/api/src/config/: mod.rs
apps/api/src/db/: mod.rs  warranty.rs
apps/api/src/error/: mod.rs
apps/api/src/models/: mod.rs  tests.rs  warranty.rs
apps/api/tests/: integration_test.rs
apps/api/tests/common/: mod.rs
apps/auth/: .dockerignore  Dockerfile  go.mod  go.sum
apps/auth/cmd/server/: main.go
apps/auth/internal/config/: config.go
apps/auth/internal/database/: db.go
apps/auth/internal/handlers/: auth.go  auth_test.go
apps/auth/internal/middleware/: auth.go
apps/auth/internal/models/: user.go
apps/auth/migrations/: 001_create_users.sql
apps/landing/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
apps/landing/src/: App.tsx  index.css  main.tsx
apps/mobile/: gradlew  settings.gradle.kts
apps/mobile/composeApp/: build.gradle.kts
apps/mobile/gradle/: libs.versions.toml
apps/mobile/whatsnew/: whatsnew-en-US  whatsnew-fr-FR
apps/web/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
apps/web/src/: App.tsx  index.css
(+62 files in other folders)
