[package]
name = "garry-api"
version = "0.1.0"
edition = "2021"
authors = ["Duscraft <contact@duscraft.com>"]
description = "Garry API - Warranty management service"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
dotenvy = "0.15"
tower = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
jsonwebtoken = "9"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
